[package]
name = "mdbook-core"
version = "0.1.0"
authors = ["rfm <r@robertmasen.pizza>"]
edition = "2018"

[dependencies]
serde = "1"
serde_derive = "1"
toml = "0.4.8"
log = "0.4"
serde_json = "1"
error-chain = "0.12"
toml-query = "0.7"

[dependencies.handlebars]
version = "1.0" 
default-features = false
features = ["no_dir_source"]