[package]
name = "mdbook-preprocessor"
version = "0.1.0"
authors = ["rfm <r@robertmasen.pizza>"]
edition = "2018"

[dependencies]
mdbook-core = { path = "../mdbook-core" }
serde = "1"
serde_derive = "1"
serde_json = "1"
log = "0.4"
shlex = "0.1"
error-chain = "0.12"
wasmer-runtime = "0.3"
bincode = { version = "1", default-features = false, features = [] }